2018-12-19  Richard Larsson  <larsson@mps.mpg.de>

	* arts-2-3-1188
	
	* src/linefunctiondata.cc,h:  Update moving a class variable
	out of the class itself and giving it a real typedef...
	
	* src/linefunctions.cc,h:  Update changing a few names to 
	make the set_lineshape functions easier to use.
	
	* src/m_linemixing.cc:  Update as per above

2018-12-18  Richard Larsson  <larsson@mps.mpg.de>

	* arts-2-3-1187
	
	* src/m_cloudradar.cc:  Un-commenting iyActiveSingleScat2-
	function for testing purposes.  Fixed a bug were "+ np" was
	instead of "+ ip".  Also fixed a bug where the zero-value was
	ignored.  I am still not sure I understand the zero-value,
	especially as I think it by default has to be input to a radar
	function and not computed somehow internally.  The code now 
	clears the first two tests in TestIyActive.arts but not the 
	last test.  I have no idea why...
	
	* src/methods.cc: iyActiveSingleScat2 added as test-function

2018-12-17  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1186

	* controlfiles/CMakeLists.txt: Added test below as fast.

	* controlfiles/artscomponents/radar/TestIyActive.arts: New.

	* src/m_basic_types.cc (NumericFromVector): New WSM. You can now
	e.g. do: NumericFromVector( a_numeric, a_vector, "max" )

2018-12-17  Richard Larsson  <larsson@mps.mpg.de>

	* arts-2-3-1185

	* controlfiles/*: Fixing names.  Also remove old catalog parameter
	test that I did not remember adding.  The new one is more complete.

	* src/m_jacobian.cc: jacobianAddLineFunctionDataParameter(s)
	changed to jacobianAddShapeCatalogParameter(s), and
	jacobianAddCatalogParameter(s) changed to
	jacobianAddBasicCatalogParameter(s).

	* src/m_retrieval.cc: As above

	* src/methods.cc: As above, but also clarifying documentation.

2018-12-17  Richard Larsson  <larsson@mps.mpg.de>

	* arts-2-3-1184
	
	* controlfiles/*:  Added test for spectroscopy derivatives using
	HTP-lineshape.  Since the tests under controlfiles/artscomponents/