@@ -1,5 +1,11 @@
 2018-12-19  Richard Larsson  <larsson@mps.mpg.de>
 
+	* arts-2-3-1189
+	
+	* src/test_propagationmatrix.cc: Forgot to update the below...
+
+2018-12-19  Richard Larsson  <larsson@mps.mpg.de>
+
 	* arts-2-3-1188
 	
 	* src/linefunctiondata.cc,h:  Update moving a class variable
